# NotepadPP

./: .gitignore  CMakeLists.txt  FileManager.h  README.md  format.sh
.github/workflows/: Windows-Qt6.5.1.yml
docs/: i18n.md  pack.md
example/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
res/StyleSheet/: AboutNotePP.qss  FileListView.qss  FindResultsDock.qss  LineEndComboBox.qss  NotepadPP.qss  ScintillaEditView.qss  TabWidget.qss  TreeView.qss
res/i18n/: en-US.ts  zh-CN.qm  zh-CN.ts
src/: AboutNotePP.cpp  AboutNotePP.h  App.cpp  CompareMode.cpp  CompareMode.h  ConfigUtils.cpp  ConfigUtils.h  DirFindPage.cpp  DirFindPage.h  EnCode.cpp  EnCode.h  FileListView.cpp  FileListView.h  FileListViewDock.cpp  FileListViewDock.h  FileListViewItem.cpp  FileListViewItem.h  FileManager.cpp  FileManager.h  FindDlg.cpp  FindDlg.h  FindPage.cpp  FindPage.h  FindRecords.cpp  FindRecords.h  FindReplaceDlg.cpp  FindReplaceDlg.h  FindResultsDock.cpp  FindResultsDock.h  FindResultsView.cpp  FindResultsView.h  HtmlStyledItemDelegate.cpp  HtmlStyledItemDelegate.h  ISorter.cpp  ISorter.h  LineEndComboBox.cpp  LineEndComboBox.h  MarkPage.cpp  MarkPage.h  NotePadPP.h  (+19 more)
